# runfile

./: .gitignore  Cargo.toml  LICENSE  README.md  runfile
docs/: banner.afdesign  design.py  lang-aspects.md  logo.afdesign  runfile-spec.md  typelang.md
src/: main.rs  runner.rs
src/engine/: engine.rs  mod.rs  runner.rs  settings.rs  storage.rs
src/engine/actions/: action.rs
src/lexer/: lexer.rs  mod.rs  tokens.rs
src/parser/: actions.rs  mod.rs  parser.rs
src/program/: cmd.rs  config.rs  mod.rs  program.rs
src/utils/: logger.rs
