[package]
name = "runfile"
version = "0.1.0"
authors = ["harmonichemispheres <robby.boney@harmonichemispheres.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
subprocess = "0.1.8"
clap = "3.0.0-beta.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3